[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
biblatex = "0.9.3"
endpoints = { version = "0.1.0", path = "../endpoints" }
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
